# planne-back-end-challenge

./: .env-sample  .gitignore  .mise.toml  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
fruit-full/: .env-sample  README.md  dockerfile  main.py  pyproject.toml
fruit-full/src/: __init__.py  constants.py  db.py  logger.py
fruit-full/src/api/: __init__.py  deps.py
fruit-full/src/api/routes/: bucket.py  fruit.py  login.py  user.py
planne-sdk/: .env-sample  README.md  pyproject.toml
planne-sdk/alembic/: env.py  script.py.mako
planne-sdk/alembic/versions/: 2026_02_16_0238-4cd01d155c50_create_users_table.py  2026_02_16_1703-5d8543e59b01_add_timestamp_fields_to_user_table.py  2026_02_16_2011-8a7c17293255_add_buckets_and_fruits_tables.py
planne-sdk/src/planne_sdk/: __init__.py  auth.py  constants.py  db_seeder.py  excpetions.py
planne-sdk/src/planne_sdk/models/: __init__.py  bucket.py  fruit.py  mixins.py  user.py
planne-sdk/src/planne_sdk/tests/: conftest.py
planne-sdk/src/planne_sdk/tests/use_cases/: test_bucket_use_case.py  test_fruit_expiration_handler.py
planne-sdk/src/planne_sdk/use_cases/: __init__.py  _fruit_expiration_handler.py  bucket_use_case.py  fruit_use_case.py  user_use_case.py
