[project]
name = "fruit-full"
version = "0.1.0"
description = "FruitFULL is a Python project that provides a simple RESTful API for managing a collection of fruits in buckets. Built for Planne's back-end challenge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "psycopg-binary>=3.3.2",
    "python-dotenv>=1.2.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "rich>=14.3.2",
    "ruff>=0.15.0",
]
