[project]
name = "fruit-full"
version = "0.1.0"
description = "FruitFULL is a Python project that provides a simple RESTful API for managing a collection of fruits in buckets. Built for Planne's back-end challenge. Follows semantic versioning."
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "fastapi[standard]==0.129.0",
    "psycopg-binary==3.3.2",
    "python-dotenv==1.2.1",
    "structlog==25.5.0",
]

[dependency-groups]
dev = [
    "commitlint==1.13.3",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "rich==14.3.2",
    "ruff==0.15.0",
]


[tool.ruff]
line-length = 79


[tool.ruff.lint]
extend-select = [
    "D",     # pydocstyle
    "E501",  # line-too-long
    "N",     # PEP8 naming
    "UP",    # pyupgrade
]
extend-ignore = [
    "F403",  # 'from module import *' used; unable to detect undefined names
]


[tool.ruff.lint.pydocstyle]
convention = "google"
