[project]
name = "planne-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vinivosh", email = "36175157+vinivosh@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"
