[project]
name = "planne-sdk"
version = "0.1.0"
description = "SDK for Planne's projects. Contains data models and use cases for interacting with Planne's DBs and systems, while following all the business logic. To be used by any other project in the eco-system. Follows semantic versioning."
readme = "README.md"
authors = [
    { name = "vinivosh", email = "36175157+vinivosh@users.noreply.github.com" }
]
requires-python = ">=3.11.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitlint>=1.13.3",
    "pre-commit>=4.5.1",
]
